# qwen-video-blaxel-mcp

./: .env.example  README.md  blaxel-model.yaml  claude_desktop_config.example.json  pyproject.toml  server.py
